# mongodb-rust-web-frameworks-example

./: .env.example  Cargo.toml  README.md
src/: error.rs  main.rs
src/db/: mongodb.rs
src/frameworks/: actix.rs  axum.rs  mod.rs  none.rs  rocket.rs  tide.rs  warp.rs
src/models/: mod.rs  restaurant.rs
