[package]
name = "mongodb_driver_web_frameworks"
version = "0.1.0"
edition = "2021"

[dependencies]
# MongoDB
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
futures = "0.3"

# Common dependencies
tokio = { version = "1.36", features = ["full"] }
async-std = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"

# Web Frameworks
actix-web = "4.5"
axum = "0.7"
rocket = { version = "0.5.1", features = ["json"] }
warp = "0.3"
tide = "0.16"
